
[package]
name = "litekv"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.42"
argh = "0.1.5"
chrono = "0.4.19"
env_logger = "0.9.0"
indoc = "1.0.3"
rusqlite = { version = "0.25.3", features = [ "bundled", "chrono", "serde_json" ] }
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.26"
