
[package]
name = "litekv"
description = "LiteKV is a tiny key-value store with a simple REST API backed by SQLite."
authors = ["Rico A. Beti <rico.beti@silentbyte.com>"]
license = "MIT"
version = "0.1.0"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/SilentByte/litekv"
repository = "https://github.com/SilentByte/litekv"
keywords = ["key-value", "store", "sqlite", "rest"]
categories = ["command-line-utilities"]

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.42"
argh = "0.1.5"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
indoc = "1.0.3"
rusqlite = { version = "0.25.3", features = ["bundled", "chrono", "serde_json"] }
serde = "1.0.126"
serde_json = "1.0.64"
thiserror = "1.0.26"

[profile.release]
lto = true
